# youtube-tui

./: Cargo.toml  README.md
src/: banner.rs  main.rs
src/helper/: mod.rs  util.rs
