[package]
name = "youtube-tui"
description = "A terminal & user interface for Spotify"
homepage = "https://github.com/TanjinAlam/youtube-tui"
authors = ["Tanjin Alam <piash.tajin@gmail.com>"]
repository = "https://github.com/TanjinAlam/youtube-tui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
