
[package]
name = "youtube-tui"
description = "A terminal & user interface for Spotify"
homepage = "https://github.com/TanjinAlam/youtube-tui"
authors = ["Tanjin Alam <piash.tajin@gmail.com>"]
repository = "https://github.com/TanjinAlam/youtube-tui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", feature = "env" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = "0.11.22"
rodio = { version =  "0.17.3" , features = ["symphonia-all"] }
rusty_ytdl = "0.6.5"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }


